Fixed spacing issue on vairables page.

--- a/src/assets/sass/js30/css-variables.scss
+++ b/src/assets/sass/js30/css-variables.scss
@@ -65,4 +65,7 @@
 .controls {
     display: flex;
     flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 500px;
 }
